[js] remove facet-loading.png, use plain-text / i18n

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -5,13 +5,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 2.0\n"
 "POT-Creation-Date: 2006-01-12 17:35+CET\n"
-"PO-Revision-Date: 2010-09-15 14:55+0200\n"
+"PO-Revision-Date: 2011-04-29 12:57+0200\n"
 "Last-Translator: Sylvain Thenault <sylvain.thenault@logilab.fr>\n"
 "Language-Team: English <devel@logilab.fr.org>\n"
-"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en\n"
 "Generated-By: pygettext.py 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -444,10 +444,10 @@ msgstr ""
 msgid "Download schema as OWL"
 msgstr ""
 
+msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
-msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
@@ -1065,9 +1065,6 @@ msgctxt "CWRelation"
 msgid "add_permission"
 msgstr "add permission"
 
-msgid "add_permission_object"
-msgstr "has permission to add"
-
 msgctxt "CWGroup"
 msgid "add_permission_object"
 msgstr "can add"
@@ -1075,6 +1072,9 @@ msgstr "can add"
 msgctxt "RQLExpression"
 msgid "add_permission_object"
 msgstr "used to define add permission on"
+
+msgid "add_permission_object"
+msgstr "has permission to add"
 
 msgid "add_relation"
 msgstr "add"
@@ -1085,8 +1085,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "addrelated"
@@ -1122,9 +1122,6 @@ msgctxt "State"
 msgid "allowed_transition"
 msgstr "allowed transition"
 
-msgid "allowed_transition_object"
-msgstr "incoming states"
-
 msgctxt "BaseTransition"
 msgid "allowed_transition_object"
 msgstr "incoming states"
@@ -1134,6 +1131,9 @@ msgid "allowed_transition_object"
 msgstr "incoming states"
 
 msgctxt "WorkflowTransition"
+msgid "allowed_transition_object"
+msgstr "incoming states"
+
 msgid "allowed_transition_object"
 msgstr "incoming states"
 
@@ -1216,12 +1216,12 @@ msgctxt "Bookmark"
 msgid "bookmarked_by"
 msgstr "bookmarked by"
 
-msgid "bookmarked_by_object"
-msgstr "has bookmarks"
-
 msgctxt "CWUser"
 msgid "bookmarked_by_object"
 msgstr "uses bookmarks"
+
+msgid "bookmarked_by_object"
+msgstr "has bookmarks"
 
 msgid "bookmarks"
 msgstr ""
@@ -1260,9 +1260,6 @@ msgctxt "TrInfo"
 msgid "by_transition"
 msgstr "by transition"
 
-msgid "by_transition_object"
-msgstr "transition information"
-
 msgctxt "BaseTransition"
 msgid "by_transition_object"
 msgstr "transition information"
@@ -1272,6 +1269,9 @@ msgid "by_transition_object"
 msgstr "transition information"
 
 msgctxt "WorkflowTransition"
+msgid "by_transition_object"
+msgstr "transition information"
+
 msgid "by_transition_object"
 msgstr "transition information"
 
@@ -1317,8 +1317,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality="
-"%(card)s"
+"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality=%(card)"
+"s"
 msgstr ""
 
 msgid "cancel"
@@ -1426,10 +1426,10 @@ msgctxt "WorkflowTransition"
 msgid "condition"
 msgstr "condition"
 
+msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
-msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
@@ -1439,11 +1439,11 @@ msgstr ""
 msgid "config"
 msgstr ""
 
-msgctxt "CWSource"
+msgctxt "CWSourceHostConfig"
 msgid "config"
 msgstr "configuration"
 
-msgctxt "CWSourceHostConfig"
+msgctxt "CWSource"
 msgid "config"
 msgstr "configuration"
 
@@ -1467,10 +1467,10 @@ msgctxt "CWRelation"
 msgid "constrained_by"
 msgstr "constrained by"
 
+msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
-msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
@@ -1484,10 +1484,10 @@ msgctxt "CWUniqueTogetherConstraint"
 msgid "constraint_of"
 msgstr "constraint of"
 
+msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
-msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
@@ -1575,8 +1575,8 @@ msgid "creating CWRelation (CWRelation relation_type CWRType %(linkto)s)"
 msgstr "creating relation %(linkto)s"
 
 msgid ""
-"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource "
-"%(linkto)s)"
+"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource %"
+"(linkto)s)"
 msgstr "creating host configuration for source %(linkto)s"
 
 msgid ""
@@ -1665,8 +1665,8 @@ msgid ""
 msgstr "creating workflow-transition leading to state %(linkto)s"
 
 msgid ""
-"creating WorkflowTransition (WorkflowTransition transition_of Workflow "
-"%(linkto)s)"
+"creating WorkflowTransition (WorkflowTransition transition_of Workflow %"
+"(linkto)s)"
 msgstr "creating workflow-transition of workflow %(linkto)s"
 
 msgid "creation"
@@ -1688,12 +1688,12 @@ msgctxt "CWConstraint"
 msgid "cstrtype"
 msgstr "constraint type"
 
-msgid "cstrtype_object"
-msgstr "used by"
-
 msgctxt "CWConstraintType"
 msgid "cstrtype_object"
 msgstr "constraint type of"
+
+msgid "cstrtype_object"
+msgstr "used by"
 
 msgid "csv entities export"
 msgstr ""
@@ -1821,10 +1821,10 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_for_source"
 msgstr "for source"
 
+msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
-msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
@@ -1835,10 +1835,10 @@ msgctxt "CWSourceHostConfig"
 msgid "cw_host_config_of"
 msgstr "source"
 
+msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
-msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
@@ -1849,6 +1849,7 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_schema"
 msgstr "maps"
 
+msgctxt "CWEType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1856,7 +1857,7 @@ msgctxt "CWAttribute"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
-msgctxt "CWEType"
+msgctxt "CWRelation"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1864,7 +1865,6 @@ msgctxt "CWRType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
-msgctxt "CWRelation"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1956,10 +1956,10 @@ msgctxt "CWEType"
 msgid "default_workflow"
 msgstr "default workflow"
 
+msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
-msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
@@ -2035,14 +2035,14 @@ msgctxt "CWRelation"
 msgid "delete_permission"
 msgstr "delete_permission"
 
-msgid "delete_permission_object"
-msgstr "has permission to delete"
-
 msgctxt "CWGroup"
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
 msgctxt "RQLExpression"
+msgid "delete_permission_object"
+msgstr "has permission to delete"
+
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
@@ -2052,8 +2052,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "depends on the constraint type"
@@ -2062,19 +2062,7 @@ msgstr ""
 msgid "description"
 msgstr "description"
 
-msgctxt "BaseTransition"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWAttribute"
-msgid "description"
-msgstr "description"
-
 msgctxt "CWEType"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWRType"
 msgid "description"
 msgstr "description"
 
@@ -2082,7 +2070,11 @@ msgctxt "CWRelation"
 msgid "description"
 msgstr "description"
 
-msgctxt "State"
+msgctxt "Workflow"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWAttribute"
 msgid "description"
 msgstr "description"
 
@@ -2090,22 +2082,22 @@ msgctxt "Transition"
 msgid "description"
 msgstr "description"
 
-msgctxt "Workflow"
-msgid "description"
-msgstr "description"
-
 msgctxt "WorkflowTransition"
 msgid "description"
 msgstr "description"
 
-msgid "description_format"
-msgstr "format"
+msgctxt "State"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWRType"
+msgid "description"
+msgstr "description"
 
 msgctxt "BaseTransition"
-msgid "description_format"
-msgstr "format"
+msgid "description"
+msgstr "description"
 
-msgctxt "CWAttribute"
 msgid "description_format"
 msgstr "format"
 
@@ -2113,19 +2105,7 @@ msgctxt "CWEType"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "CWRType"
-msgid "description_format"
-msgstr "format"
-
 msgctxt "CWRelation"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "State"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "Transition"
 msgid "description_format"
 msgstr "format"
 
@@ -2133,7 +2113,27 @@ msgctxt "Workflow"
 msgid "description_format"
 msgstr "format"
 
+msgctxt "CWAttribute"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Transition"
+msgid "description_format"
+msgstr "format"
+
 msgctxt "WorkflowTransition"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "State"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "CWRType"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "BaseTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -2154,18 +2154,18 @@ msgstr ""
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "SubWorkflowExitPoint"
-msgid "destination_state"
-msgstr "destination state"
-
 msgctxt "Transition"
 msgid "destination_state"
 msgstr "destination state"
 
+msgctxt "SubWorkflowExitPoint"
+msgid "destination_state"
+msgstr "destination state"
+
+msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
-msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
@@ -2328,6 +2328,9 @@ msgstr "expression type"
 msgid "external page"
 msgstr ""
 
+msgid "facet-loading-msg"
+msgstr "processing, please wait"
+
 msgid "facet.filters"
 msgstr "filter"
 
@@ -2427,12 +2430,12 @@ msgctxt "CWProperty"
 msgid "for_user"
 msgstr "for user"
 
-msgid "for_user_object"
-msgstr "use properties"
-
 msgctxt "CWUser"
 msgid "for_user_object"
 msgstr "property of"
+
+msgid "for_user_object"
+msgstr "use properties"
 
 msgid "friday"
 msgstr ""
@@ -2455,12 +2458,12 @@ msgctxt "CWRelation"
 msgid "from_entity"
 msgstr "from entity"
 
-msgid "from_entity_object"
-msgstr "subjet relation"
-
 msgctxt "CWEType"
 msgid "from_entity_object"
 msgstr "subjec relation"
+
+msgid "from_entity_object"
+msgstr "subjet relation"
 
 msgid "from_interval_start"
 msgstr "from"
@@ -2472,10 +2475,10 @@ msgctxt "TrInfo"
 msgid "from_state"
 msgstr "from state"
 
+msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
-msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
@@ -2559,6 +2562,9 @@ msgstr "header (left)"
 msgid "header-right"
 msgstr "header (right)"
 
+msgid "help"
+msgstr ""
+
 msgid "hide filter form"
 msgstr ""
 
@@ -2639,10 +2645,10 @@ msgctxt "CWUser"
 msgid "in_group"
 msgstr "in group"
 
+msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
-msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
@@ -2700,10 +2706,10 @@ msgctxt "Workflow"
 msgid "initial_state"
 msgstr "initial state"
 
+msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
-msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
@@ -2992,11 +2998,23 @@ msgstr ""
 msgid "name"
 msgstr ""
 
-msgctxt "BaseTransition"
+msgctxt "CWEType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWCache"
+msgctxt "Transition"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWSource"
+msgid "name"
+msgstr "name"
+
+msgctxt "Workflow"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWGroup"
 msgid "name"
 msgstr "name"
 
@@ -3004,11 +3022,11 @@ msgctxt "CWConstraintType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWEType"
+msgctxt "WorkflowTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWGroup"
+msgctxt "State"
 msgid "name"
 msgstr "name"
 
@@ -3020,23 +3038,11 @@ msgctxt "CWRType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWSource"
+msgctxt "BaseTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "State"
-msgid "name"
-msgstr "name"
-
-msgctxt "Transition"
-msgid "name"
-msgstr "name"
-
-msgctxt "Workflow"
-msgid "name"
-msgstr "name"
-
-msgctxt "WorkflowTransition"
+msgctxt "CWCache"
 msgid "name"
 msgstr "name"
 
@@ -3265,10 +3271,10 @@ msgctxt "EmailAddress"
 msgid "prefered_form"
 msgstr "prefered form"
 
+msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
-msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
@@ -3288,10 +3294,10 @@ msgctxt "CWUser"
 msgid "primary_email"
 msgstr "primary email"
 
+msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
-msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
@@ -3322,20 +3328,17 @@ msgstr ""
 msgid "read_permission"
 msgstr "can be read by"
 
-msgctxt "CWAttribute"
+msgctxt "CWEType"
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWEType"
+msgctxt "CWAttribute"
 msgid "read_permission"
 msgstr "read permission"
 
 msgctxt "CWRelation"
 msgid "read_permission"
 msgstr "read permission"
-
-msgid "read_permission_object"
-msgstr "has permission to read"
 
 msgctxt "CWGroup"
 msgid "read_permission_object"
@@ -3344,6 +3347,9 @@ msgstr "can be read by"
 msgctxt "RQLExpression"
 msgid "read_permission_object"
 msgstr "can be read by"
+
+msgid "read_permission_object"
+msgstr "has permission to read"
 
 msgid "regexp matching host(s) to which this config applies"
 msgstr ""
@@ -3399,10 +3405,10 @@ msgctxt "CWRelation"
 msgid "relation_type"
 msgstr "relation type"
 
+msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
-msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
@@ -3416,10 +3422,10 @@ msgstr "relations"
 msgid "relations deleted"
 msgstr ""
 
+msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
-msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
@@ -3436,11 +3442,11 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWPermission"
+msgctxt "Transition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "Transition"
+msgctxt "CWPermission"
 msgid "require_group"
 msgstr "require group"
 
@@ -3448,10 +3454,10 @@ msgctxt "WorkflowTransition"
 msgid "require_group"
 msgstr "require group"
 
+msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
-msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
@@ -3649,10 +3655,10 @@ msgctxt "CWEType"
 msgid "specializes"
 msgstr "specializes"
 
+msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
-msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
@@ -3693,10 +3699,10 @@ msgctxt "State"
 msgid "state_of"
 msgstr "state of"
 
+msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
-msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
@@ -3740,20 +3746,20 @@ msgctxt "WorkflowTransition"
 msgid "subworkflow_exit"
 msgstr "subworkflow exit"
 
-msgid "subworkflow_exit_object"
-msgstr "subworkflow exit of"
-
 msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_exit_object"
 msgstr "subworkflow exit of"
 
-msgid "subworkflow_object"
-msgstr "subworkflow of"
+msgid "subworkflow_exit_object"
+msgstr "subworkflow exit of"
 
 msgctxt "Workflow"
 msgid "subworkflow_object"
 msgstr "subworkflow of"
 
+msgid "subworkflow_object"
+msgstr "subworkflow of"
+
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
@@ -3761,10 +3767,10 @@ msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
+msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
-msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
@@ -3884,10 +3890,10 @@ msgctxt "CWRelation"
 msgid "to_entity"
 msgstr "to entity"
 
+msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
-msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
@@ -3901,10 +3907,10 @@ msgctxt "TrInfo"
 msgid "to_state"
 msgstr "to state"
 
+msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
-msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
@@ -3955,10 +3961,10 @@ msgctxt "WorkflowTransition"
 msgid "transition_of"
 msgstr "transition of"
 
+msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
-msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
@@ -3975,15 +3981,15 @@ msgctxt "BaseTransition"
 msgid "type"
 msgstr "type"
 
-msgctxt "CWSource"
-msgid "type"
-msgstr "type"
-
 msgctxt "Transition"
 msgid "type"
 msgstr "type"
 
 msgctxt "WorkflowTransition"
+msgid "type"
+msgstr "type"
+
+msgctxt "CWSource"
 msgid "type"
 msgstr "type"
 
@@ -4075,22 +4081,22 @@ msgstr ""
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgctxt "CWAttribute"
-msgid "update_permission"
-msgstr "can be updated by"
-
 msgctxt "CWEType"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgid "update_permission_object"
-msgstr "has permission to update"
+msgctxt "CWAttribute"
+msgid "update_permission"
+msgstr "can be updated by"
 
 msgctxt "CWGroup"
 msgid "update_permission_object"
 msgstr "has permission to update"
 
 msgctxt "RQLExpression"
+msgid "update_permission_object"
+msgstr "has permission to update"
+
 msgid "update_permission_object"
 msgstr "has permission to update"
 
@@ -4134,10 +4140,10 @@ msgctxt "CWUser"
 msgid "use_email"
 msgstr "use email"
 
+msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
-msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
@@ -4329,10 +4335,10 @@ msgctxt "Workflow"
 msgid "workflow_of"
 msgstr "workflow of"
 
+msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
-msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
