[i18n] fix french translation

--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -1946,10 +1946,10 @@ msgid "cw_schema_object"
 msgstr "mappé par"
 
 msgid "cw_source"
-msgstr "from data source"
+msgstr "source"
 
 msgid "cw_source_object"
-msgstr "entities"
+msgstr "entités"
 
 msgid "cwetype-box"
 msgstr "vue \"boîte\""
