--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,12 @@ cubicweb (3.12.0-1) unstable; urgency=low
 
  -- Alexandre Fayolle <alexandre.fayolle@logilab.fr>  Fri, 01 Apr 2011 15:59:37 +0200
 
+cubicweb (3.11.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 05 May 2011 16:00:53 +0200
+
 cubicweb (3.11.2-1) unstable; urgency=low
 
   * new upstream release
