--- a/i18n/en.po
+++ b/i18n/en.po
@@ -8,10 +8,10 @@ msgstr ""
 "PO-Revision-Date: 2011-04-29 12:57+0200\n"
 "Last-Translator: Sylvain Thenault <sylvain.thenault@logilab.fr>\n"
 "Language-Team: English <devel@logilab.fr.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Generated-By: pygettext.py 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -444,10 +444,10 @@ msgstr ""
 msgid "Download schema as OWL"
 msgstr ""
 
-msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
+msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
@@ -1065,6 +1065,9 @@ msgctxt "CWRelation"
 msgid "add_permission"
 msgstr "add permission"
 
+msgid "add_permission_object"
+msgstr "has permission to add"
+
 msgctxt "CWGroup"
 msgid "add_permission_object"
 msgstr "can add"
@@ -1072,9 +1075,6 @@ msgstr "can add"
 msgctxt "RQLExpression"
 msgid "add_permission_object"
 msgstr "used to define add permission on"
-
-msgid "add_permission_object"
-msgstr "has permission to add"
 
 msgid "add_relation"
 msgstr "add"
@@ -1085,8 +1085,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
-"(eidto)s"
+"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
+"%(eidto)s"
 msgstr ""
 
 msgid "addrelated"
@@ -1122,6 +1122,9 @@ msgctxt "State"
 msgid "allowed_transition"
 msgstr "allowed transition"
 
+msgid "allowed_transition_object"
+msgstr "incoming states"
+
 msgctxt "BaseTransition"
 msgid "allowed_transition_object"
 msgstr "incoming states"
@@ -1131,9 +1134,6 @@ msgid "allowed_transition_object"
 msgstr "incoming states"
 
 msgctxt "WorkflowTransition"
-msgid "allowed_transition_object"
-msgstr "incoming states"
-
 msgid "allowed_transition_object"
 msgstr "incoming states"
 
@@ -1216,12 +1216,12 @@ msgctxt "Bookmark"
 msgid "bookmarked_by"
 msgstr "bookmarked by"
 
+msgid "bookmarked_by_object"
+msgstr "has bookmarks"
+
 msgctxt "CWUser"
 msgid "bookmarked_by_object"
 msgstr "uses bookmarks"
-
-msgid "bookmarked_by_object"
-msgstr "has bookmarks"
 
 msgid "bookmarks"
 msgstr ""
@@ -1260,6 +1260,9 @@ msgctxt "TrInfo"
 msgid "by_transition"
 msgstr "by transition"
 
+msgid "by_transition_object"
+msgstr "transition information"
+
 msgctxt "BaseTransition"
 msgid "by_transition_object"
 msgstr "transition information"
@@ -1269,9 +1272,6 @@ msgid "by_transition_object"
 msgstr "transition information"
 
 msgctxt "WorkflowTransition"
-msgid "by_transition_object"
-msgstr "transition information"
-
 msgid "by_transition_object"
 msgstr "transition information"
 
@@ -1317,8 +1317,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality=%(card)"
-"s"
+"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality="
+"%(card)s"
 msgstr ""
 
 msgid "cancel"
@@ -1426,10 +1426,10 @@ msgctxt "WorkflowTransition"
 msgid "condition"
 msgstr "condition"
 
-msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
+msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
@@ -1439,11 +1439,11 @@ msgstr ""
 msgid "config"
 msgstr ""
 
-msgctxt "CWSourceHostConfig"
+msgctxt "CWSource"
 msgid "config"
 msgstr "configuration"
 
-msgctxt "CWSource"
+msgctxt "CWSourceHostConfig"
 msgid "config"
 msgstr "configuration"
 
@@ -1467,10 +1467,10 @@ msgctxt "CWRelation"
 msgid "constrained_by"
 msgstr "constrained by"
 
-msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
+msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
@@ -1484,10 +1484,10 @@ msgctxt "CWUniqueTogetherConstraint"
 msgid "constraint_of"
 msgstr "constraint of"
 
-msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
+msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
@@ -1575,8 +1575,8 @@ msgid "creating CWRelation (CWRelation relation_type CWRType %(linkto)s)"
 msgstr "creating relation %(linkto)s"
 
 msgid ""
-"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource %"
-"(linkto)s)"
+"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource "
+"%(linkto)s)"
 msgstr "creating host configuration for source %(linkto)s"
 
 msgid ""
@@ -1665,8 +1665,8 @@ msgid ""
 msgstr "creating workflow-transition leading to state %(linkto)s"
 
 msgid ""
-"creating WorkflowTransition (WorkflowTransition transition_of Workflow %"
-"(linkto)s)"
+"creating WorkflowTransition (WorkflowTransition transition_of Workflow "
+"%(linkto)s)"
 msgstr "creating workflow-transition of workflow %(linkto)s"
 
 msgid "creation"
@@ -1688,12 +1688,12 @@ msgctxt "CWConstraint"
 msgid "cstrtype"
 msgstr "constraint type"
 
+msgid "cstrtype_object"
+msgstr "used by"
+
 msgctxt "CWConstraintType"
 msgid "cstrtype_object"
 msgstr "constraint type of"
-
-msgid "cstrtype_object"
-msgstr "used by"
 
 msgid "csv entities export"
 msgstr ""
@@ -1821,10 +1821,10 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_for_source"
 msgstr "for source"
 
-msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
+msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
@@ -1835,10 +1835,10 @@ msgctxt "CWSourceHostConfig"
 msgid "cw_host_config_of"
 msgstr "source"
 
-msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
+msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
@@ -1849,7 +1849,6 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_schema"
 msgstr "maps"
 
-msgctxt "CWEType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1857,7 +1856,7 @@ msgctxt "CWAttribute"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
-msgctxt "CWRelation"
+msgctxt "CWEType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1865,6 +1864,7 @@ msgctxt "CWRType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
+msgctxt "CWRelation"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1956,10 +1956,10 @@ msgctxt "CWEType"
 msgid "default_workflow"
 msgstr "default workflow"
 
-msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
+msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
@@ -2035,14 +2035,14 @@ msgctxt "CWRelation"
 msgid "delete_permission"
 msgstr "delete_permission"
 
+msgid "delete_permission_object"
+msgstr "has permission to delete"
+
 msgctxt "CWGroup"
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
 msgctxt "RQLExpression"
-msgid "delete_permission_object"
-msgstr "has permission to delete"
-
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
@@ -2052,8 +2052,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
-"(eidto)s"
+"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
+"%(eidto)s"
 msgstr ""
 
 msgid "depends on the constraint type"
@@ -2062,15 +2062,7 @@ msgstr ""
 msgid "description"
 msgstr "description"
 
-msgctxt "CWEType"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWRelation"
-msgid "description"
-msgstr "description"
-
-msgctxt "Workflow"
+msgctxt "BaseTransition"
 msgid "description"
 msgstr "description"
 
@@ -2078,15 +2070,7 @@ msgctxt "CWAttribute"
 msgid "description"
 msgstr "description"
 
-msgctxt "Transition"
-msgid "description"
-msgstr "description"
-
-msgctxt "WorkflowTransition"
-msgid "description"
-msgstr "description"
-
-msgctxt "State"
+msgctxt "CWEType"
 msgid "description"
 msgstr "description"
 
@@ -2094,22 +2078,30 @@ msgctxt "CWRType"
 msgid "description"
 msgstr "description"
 
-msgctxt "BaseTransition"
+msgctxt "CWRelation"
+msgid "description"
+msgstr "description"
+
+msgctxt "State"
+msgid "description"
+msgstr "description"
+
+msgctxt "Transition"
+msgid "description"
+msgstr "description"
+
+msgctxt "Workflow"
+msgid "description"
+msgstr "description"
+
+msgctxt "WorkflowTransition"
 msgid "description"
 msgstr "description"
 
 msgid "description_format"
 msgstr "format"
 
-msgctxt "CWEType"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "CWRelation"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "Workflow"
+msgctxt "BaseTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -2117,15 +2109,7 @@ msgctxt "CWAttribute"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "Transition"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "WorkflowTransition"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "State"
+msgctxt "CWEType"
 msgid "description_format"
 msgstr "format"
 
@@ -2133,7 +2117,23 @@ msgctxt "CWRType"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "BaseTransition"
+msgctxt "CWRelation"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "State"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Transition"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Workflow"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "WorkflowTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -2154,18 +2154,18 @@ msgstr ""
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "Transition"
-msgid "destination_state"
-msgstr "destination state"
-
 msgctxt "SubWorkflowExitPoint"
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "State"
+msgctxt "Transition"
+msgid "destination_state"
+msgstr "destination state"
+
 msgid "destination_state_object"
 msgstr "destination of"
 
+msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
@@ -2430,12 +2430,12 @@ msgctxt "CWProperty"
 msgid "for_user"
 msgstr "for user"
 
+msgid "for_user_object"
+msgstr "use properties"
+
 msgctxt "CWUser"
 msgid "for_user_object"
 msgstr "property of"
-
-msgid "for_user_object"
-msgstr "use properties"
 
 msgid "friday"
 msgstr ""
@@ -2458,12 +2458,12 @@ msgctxt "CWRelation"
 msgid "from_entity"
 msgstr "from entity"
 
+msgid "from_entity_object"
+msgstr "subjet relation"
+
 msgctxt "CWEType"
 msgid "from_entity_object"
 msgstr "subjec relation"
-
-msgid "from_entity_object"
-msgstr "subjet relation"
 
 msgid "from_interval_start"
 msgstr "from"
@@ -2475,10 +2475,10 @@ msgctxt "TrInfo"
 msgid "from_state"
 msgstr "from state"
 
-msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
+msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
@@ -2562,9 +2562,6 @@ msgstr "header (left)"
 msgid "header-right"
 msgstr "header (right)"
 
-msgid "help"
-msgstr ""
-
 msgid "hide filter form"
 msgstr ""
 
@@ -2645,10 +2642,10 @@ msgctxt "CWUser"
 msgid "in_group"
 msgstr "in group"
 
-msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
+msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
@@ -2706,10 +2703,10 @@ msgctxt "Workflow"
 msgid "initial_state"
 msgstr "initial state"
 
-msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
+msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
@@ -2998,23 +2995,11 @@ msgstr ""
 msgid "name"
 msgstr ""
 
-msgctxt "CWEType"
+msgctxt "BaseTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "Transition"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWSource"
-msgid "name"
-msgstr "name"
-
-msgctxt "Workflow"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWGroup"
+msgctxt "CWCache"
 msgid "name"
 msgstr "name"
 
@@ -3022,11 +3007,11 @@ msgctxt "CWConstraintType"
 msgid "name"
 msgstr "name"
 
-msgctxt "WorkflowTransition"
+msgctxt "CWEType"
 msgid "name"
 msgstr "name"
 
-msgctxt "State"
+msgctxt "CWGroup"
 msgid "name"
 msgstr "name"
 
@@ -3038,11 +3023,23 @@ msgctxt "CWRType"
 msgid "name"
 msgstr "name"
 
-msgctxt "BaseTransition"
+msgctxt "CWSource"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWCache"
+msgctxt "State"
+msgid "name"
+msgstr "name"
+
+msgctxt "Transition"
+msgid "name"
+msgstr "name"
+
+msgctxt "Workflow"
+msgid "name"
+msgstr "name"
+
+msgctxt "WorkflowTransition"
 msgid "name"
 msgstr "name"
 
@@ -3097,6 +3094,12 @@ msgid "no"
 msgstr ""
 
 msgid "no associated permissions"
+msgstr ""
+
+msgid "no content next link"
+msgstr ""
+
+msgid "no content prev link"
 msgstr ""
 
 #, python-format
@@ -3271,10 +3274,10 @@ msgctxt "EmailAddress"
 msgid "prefered_form"
 msgstr "prefered form"
 
-msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
+msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
@@ -3294,10 +3297,10 @@ msgctxt "CWUser"
 msgid "primary_email"
 msgstr "primary email"
 
-msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
+msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
@@ -3328,17 +3331,20 @@ msgstr ""
 msgid "read_permission"
 msgstr "can be read by"
 
-msgctxt "CWEType"
+msgctxt "CWAttribute"
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWAttribute"
+msgctxt "CWEType"
 msgid "read_permission"
 msgstr "read permission"
 
 msgctxt "CWRelation"
 msgid "read_permission"
 msgstr "read permission"
+
+msgid "read_permission_object"
+msgstr "has permission to read"
 
 msgctxt "CWGroup"
 msgid "read_permission_object"
@@ -3347,9 +3353,6 @@ msgstr "can be read by"
 msgctxt "RQLExpression"
 msgid "read_permission_object"
 msgstr "can be read by"
-
-msgid "read_permission_object"
-msgstr "has permission to read"
 
 msgid "regexp matching host(s) to which this config applies"
 msgstr ""
@@ -3405,10 +3408,10 @@ msgctxt "CWRelation"
 msgid "relation_type"
 msgstr "relation type"
 
-msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
+msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
@@ -3422,10 +3425,10 @@ msgstr "relations"
 msgid "relations deleted"
 msgstr ""
 
-msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
+msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
@@ -3442,11 +3445,11 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "Transition"
+msgctxt "CWPermission"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWPermission"
+msgctxt "Transition"
 msgid "require_group"
 msgstr "require group"
 
@@ -3454,10 +3457,10 @@ msgctxt "WorkflowTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
+msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
@@ -3655,10 +3658,10 @@ msgctxt "CWEType"
 msgid "specializes"
 msgstr "specializes"
 
-msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
+msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
@@ -3699,10 +3702,10 @@ msgctxt "State"
 msgid "state_of"
 msgstr "state of"
 
-msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
+msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
@@ -3746,20 +3749,20 @@ msgctxt "WorkflowTransition"
 msgid "subworkflow_exit"
 msgstr "subworkflow exit"
 
+msgid "subworkflow_exit_object"
+msgstr "subworkflow exit of"
+
 msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_exit_object"
 msgstr "subworkflow exit of"
 
-msgid "subworkflow_exit_object"
-msgstr "subworkflow exit of"
+msgid "subworkflow_object"
+msgstr "subworkflow of"
 
 msgctxt "Workflow"
 msgid "subworkflow_object"
 msgstr "subworkflow of"
 
-msgid "subworkflow_object"
-msgstr "subworkflow of"
-
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
@@ -3767,10 +3770,10 @@ msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
-msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
+msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
@@ -3829,6 +3832,12 @@ msgstr ""
 
 #, python-format
 msgid "the value \"%s\" is already used, use another one"
+msgstr ""
+
+msgid "there is no next page"
+msgstr ""
+
+msgid "there is no previous page"
 msgstr ""
 
 msgid "this action is not reversible!"
@@ -3890,10 +3899,10 @@ msgctxt "CWRelation"
 msgid "to_entity"
 msgstr "to entity"
 
-msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
+msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
@@ -3907,10 +3916,10 @@ msgctxt "TrInfo"
 msgid "to_state"
 msgstr "to state"
 
-msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
+msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
@@ -3961,10 +3970,10 @@ msgctxt "WorkflowTransition"
 msgid "transition_of"
 msgstr "transition of"
 
-msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
+msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
@@ -3981,15 +3990,15 @@ msgctxt "BaseTransition"
 msgid "type"
 msgstr "type"
 
+msgctxt "CWSource"
+msgid "type"
+msgstr "type"
+
 msgctxt "Transition"
 msgid "type"
 msgstr "type"
 
 msgctxt "WorkflowTransition"
-msgid "type"
-msgstr "type"
-
-msgctxt "CWSource"
 msgid "type"
 msgstr "type"
 
@@ -4081,22 +4090,22 @@ msgstr ""
 msgid "update_permission"
 msgstr "can be updated by"
 
+msgctxt "CWAttribute"
+msgid "update_permission"
+msgstr "can be updated by"
+
 msgctxt "CWEType"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgctxt "CWAttribute"
-msgid "update_permission"
-msgstr "can be updated by"
+msgid "update_permission_object"
+msgstr "has permission to update"
 
 msgctxt "CWGroup"
 msgid "update_permission_object"
 msgstr "has permission to update"
 
 msgctxt "RQLExpression"
-msgid "update_permission_object"
-msgstr "has permission to update"
-
 msgid "update_permission_object"
 msgstr "has permission to update"
 
@@ -4140,10 +4149,10 @@ msgctxt "CWUser"
 msgid "use_email"
 msgstr "use email"
 
-msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
+msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
@@ -4335,10 +4344,10 @@ msgctxt "Workflow"
 msgid "workflow_of"
 msgstr "workflow of"
 
-msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
+msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
