--- a/i18n/en.po
+++ b/i18n/en.po
@@ -3374,7 +3374,7 @@ msgstr ""
 
 #, python-format
 msgid ""
-"relation %s is supported but none if its definitions matches supported "
+"relation %s is supported but none of its definitions matches supported "
 "entities"
 msgstr ""
 
