--- a/i18n/de.po
+++ b/i18n/de.po
@@ -3473,7 +3473,7 @@ msgstr ""
 
 #, python-format
 msgid ""
-"relation %s is supported but none if its definitions matches supported "
+"relation %s is supported but none of its definitions matches supported "
 "entities"
 msgstr ""
 
