--- a/i18n/en.po
+++ b/i18n/en.po
@@ -3920,7 +3920,7 @@ msgctxt "TrInfo"
 msgid "tr_count"
 msgstr "transition number"
 
-msgid "transaction undoed"
+msgid "transaction undone"
 msgstr ""
 
 #, python-format
