--- a/i18n/en.po
+++ b/i18n/en.po
@@ -444,10 +444,10 @@ msgstr ""
 msgid "Download schema as OWL"
 msgstr ""
 
+msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
-msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
@@ -1061,9 +1061,6 @@ msgctxt "CWRelation"
 msgid "add_permission"
 msgstr "add permission"
 
-msgid "add_permission_object"
-msgstr "has permission to add"
-
 msgctxt "CWGroup"
 msgid "add_permission_object"
 msgstr "can add"
@@ -1071,6 +1068,9 @@ msgstr "can add"
 msgctxt "RQLExpression"
 msgid "add_permission_object"
 msgstr "used to define add permission on"
+
+msgid "add_permission_object"
+msgstr "has permission to add"
 
 msgid "add_relation"
 msgstr "add"
@@ -1081,8 +1081,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "addrelated"
@@ -1118,9 +1118,6 @@ msgctxt "State"
 msgid "allowed_transition"
 msgstr "allowed transition"
 
-msgid "allowed_transition_object"
-msgstr "incoming states"
-
 msgctxt "BaseTransition"
 msgid "allowed_transition_object"
 msgstr "incoming states"
@@ -1130,6 +1127,9 @@ msgid "allowed_transition_object"
 msgstr "incoming states"
 
 msgctxt "WorkflowTransition"
+msgid "allowed_transition_object"
+msgstr "incoming states"
+
 msgid "allowed_transition_object"
 msgstr "incoming states"
 
@@ -1212,12 +1212,12 @@ msgctxt "Bookmark"
 msgid "bookmarked_by"
 msgstr "bookmarked by"
 
-msgid "bookmarked_by_object"
-msgstr "has bookmarks"
-
 msgctxt "CWUser"
 msgid "bookmarked_by_object"
 msgstr "uses bookmarks"
+
+msgid "bookmarked_by_object"
+msgstr "has bookmarks"
 
 msgid "bookmarks"
 msgstr ""
@@ -1256,9 +1256,6 @@ msgctxt "TrInfo"
 msgid "by_transition"
 msgstr "by transition"
 
-msgid "by_transition_object"
-msgstr "transition information"
-
 msgctxt "BaseTransition"
 msgid "by_transition_object"
 msgstr "transition information"
@@ -1268,6 +1265,9 @@ msgid "by_transition_object"
 msgstr "transition information"
 
 msgctxt "WorkflowTransition"
+msgid "by_transition_object"
+msgstr "transition information"
+
 msgid "by_transition_object"
 msgstr "transition information"
 
@@ -1313,8 +1313,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality="
-"%(card)s"
+"can't set inlined=True, %(stype)s %(rtype)s %(otype)s has cardinality=%(card)"
+"s"
 msgstr ""
 
 msgid "cancel"
@@ -1422,10 +1422,10 @@ msgctxt "WorkflowTransition"
 msgid "condition"
 msgstr "condition"
 
+msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
-msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
@@ -1435,11 +1435,11 @@ msgstr ""
 msgid "config"
 msgstr ""
 
-msgctxt "CWSource"
+msgctxt "CWSourceHostConfig"
 msgid "config"
 msgstr "configuration"
 
-msgctxt "CWSourceHostConfig"
+msgctxt "CWSource"
 msgid "config"
 msgstr "configuration"
 
@@ -1463,10 +1463,10 @@ msgctxt "CWRelation"
 msgid "constrained_by"
 msgstr "constrained by"
 
+msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
-msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
@@ -1480,10 +1480,10 @@ msgctxt "CWUniqueTogetherConstraint"
 msgid "constraint_of"
 msgstr "constraint of"
 
+msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
-msgctxt "CWEType"
 msgid "constraint_of_object"
 msgstr "constrained by"
 
@@ -1571,8 +1571,8 @@ msgid "creating CWRelation (CWRelation relation_type CWRType %(linkto)s)"
 msgstr "creating relation %(linkto)s"
 
 msgid ""
-"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource "
-"%(linkto)s)"
+"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource %"
+"(linkto)s)"
 msgstr "creating host configuration for source %(linkto)s"
 
 msgid ""
@@ -1661,8 +1661,8 @@ msgid ""
 msgstr "creating workflow-transition leading to state %(linkto)s"
 
 msgid ""
-"creating WorkflowTransition (WorkflowTransition transition_of Workflow "
-"%(linkto)s)"
+"creating WorkflowTransition (WorkflowTransition transition_of Workflow %"
+"(linkto)s)"
 msgstr "creating workflow-transition of workflow %(linkto)s"
 
 msgid "creation"
@@ -1684,12 +1684,12 @@ msgctxt "CWConstraint"
 msgid "cstrtype"
 msgstr "constraint type"
 
-msgid "cstrtype_object"
-msgstr "used by"
-
 msgctxt "CWConstraintType"
 msgid "cstrtype_object"
 msgstr "constraint type of"
+
+msgid "cstrtype_object"
+msgstr "used by"
 
 msgid "csv entities export"
 msgstr ""
@@ -1817,10 +1817,10 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_for_source"
 msgstr "for source"
 
+msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
-msgctxt "CWSource"
 msgid "cw_for_source_object"
 msgstr "mapping"
 
@@ -1831,10 +1831,10 @@ msgctxt "CWSourceHostConfig"
 msgid "cw_host_config_of"
 msgstr "source"
 
+msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
-msgctxt "CWSource"
 msgid "cw_host_config_of_object"
 msgstr "host configuration"
 
@@ -1845,6 +1845,7 @@ msgctxt "CWSourceSchemaConfig"
 msgid "cw_schema"
 msgstr "maps"
 
+msgctxt "CWEType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1852,7 +1853,7 @@ msgctxt "CWAttribute"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
-msgctxt "CWEType"
+msgctxt "CWRelation"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1860,7 +1861,6 @@ msgctxt "CWRType"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
-msgctxt "CWRelation"
 msgid "cw_schema_object"
 msgstr "mapped by"
 
@@ -1952,10 +1952,10 @@ msgctxt "CWEType"
 msgid "default_workflow"
 msgstr "default workflow"
 
+msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
-msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
@@ -2031,14 +2031,14 @@ msgctxt "CWRelation"
 msgid "delete_permission"
 msgstr "delete_permission"
 
-msgid "delete_permission_object"
-msgstr "has permission to delete"
-
 msgctxt "CWGroup"
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
 msgctxt "RQLExpression"
+msgid "delete_permission_object"
+msgstr "has permission to delete"
+
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
@@ -2048,8 +2048,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "depends on the constraint type"
@@ -2058,19 +2058,7 @@ msgstr ""
 msgid "description"
 msgstr "description"
 
-msgctxt "BaseTransition"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWAttribute"
-msgid "description"
-msgstr "description"
-
 msgctxt "CWEType"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWRType"
 msgid "description"
 msgstr "description"
 
@@ -2078,7 +2066,11 @@ msgctxt "CWRelation"
 msgid "description"
 msgstr "description"
 
-msgctxt "State"
+msgctxt "Workflow"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWAttribute"
 msgid "description"
 msgstr "description"
 
@@ -2086,22 +2078,22 @@ msgctxt "Transition"
 msgid "description"
 msgstr "description"
 
-msgctxt "Workflow"
-msgid "description"
-msgstr "description"
-
 msgctxt "WorkflowTransition"
 msgid "description"
 msgstr "description"
 
-msgid "description_format"
-msgstr "format"
+msgctxt "State"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWRType"
+msgid "description"
+msgstr "description"
 
 msgctxt "BaseTransition"
-msgid "description_format"
-msgstr "format"
+msgid "description"
+msgstr "description"
 
-msgctxt "CWAttribute"
 msgid "description_format"
 msgstr "format"
 
@@ -2109,19 +2101,7 @@ msgctxt "CWEType"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "CWRType"
-msgid "description_format"
-msgstr "format"
-
 msgctxt "CWRelation"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "State"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "Transition"
 msgid "description_format"
 msgstr "format"
 
@@ -2129,7 +2109,27 @@ msgctxt "Workflow"
 msgid "description_format"
 msgstr "format"
 
+msgctxt "CWAttribute"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Transition"
+msgid "description_format"
+msgstr "format"
+
 msgctxt "WorkflowTransition"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "State"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "CWRType"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "BaseTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -2150,18 +2150,18 @@ msgstr ""
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "SubWorkflowExitPoint"
-msgid "destination_state"
-msgstr "destination state"
-
 msgctxt "Transition"
 msgid "destination_state"
 msgstr "destination state"
 
+msgctxt "SubWorkflowExitPoint"
+msgid "destination_state"
+msgstr "destination state"
+
+msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
-msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
@@ -2426,12 +2426,12 @@ msgctxt "CWProperty"
 msgid "for_user"
 msgstr "for user"
 
-msgid "for_user_object"
-msgstr "use properties"
-
 msgctxt "CWUser"
 msgid "for_user_object"
 msgstr "property of"
+
+msgid "for_user_object"
+msgstr "use properties"
 
 msgid "friday"
 msgstr ""
@@ -2454,12 +2454,12 @@ msgctxt "CWRelation"
 msgid "from_entity"
 msgstr "from entity"
 
-msgid "from_entity_object"
-msgstr "subjet relation"
-
 msgctxt "CWEType"
 msgid "from_entity_object"
 msgstr "subjec relation"
+
+msgid "from_entity_object"
+msgstr "subjet relation"
 
 msgid "from_interval_start"
 msgstr "from"
@@ -2471,10 +2471,10 @@ msgctxt "TrInfo"
 msgid "from_state"
 msgstr "from state"
 
+msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
-msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
@@ -2558,6 +2558,9 @@ msgstr "header (left)"
 msgid "header-right"
 msgstr "header (right)"
 
+msgid "help"
+msgstr ""
+
 msgid "hide filter form"
 msgstr ""
 
@@ -2638,10 +2641,10 @@ msgctxt "CWUser"
 msgid "in_group"
 msgstr "in group"
 
+msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
-msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
@@ -2699,10 +2702,10 @@ msgctxt "Workflow"
 msgid "initial_state"
 msgstr "initial state"
 
+msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
-msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
@@ -2991,11 +2994,23 @@ msgstr ""
 msgid "name"
 msgstr ""
 
-msgctxt "BaseTransition"
+msgctxt "CWEType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWCache"
+msgctxt "Transition"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWSource"
+msgid "name"
+msgstr "name"
+
+msgctxt "Workflow"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWGroup"
 msgid "name"
 msgstr "name"
 
@@ -3003,11 +3018,11 @@ msgctxt "CWConstraintType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWEType"
+msgctxt "WorkflowTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWGroup"
+msgctxt "State"
 msgid "name"
 msgstr "name"
 
@@ -3019,23 +3034,11 @@ msgctxt "CWRType"
 msgid "name"
 msgstr "name"
 
-msgctxt "CWSource"
+msgctxt "BaseTransition"
 msgid "name"
 msgstr "name"
 
-msgctxt "State"
-msgid "name"
-msgstr "name"
-
-msgctxt "Transition"
-msgid "name"
-msgstr "name"
-
-msgctxt "Workflow"
-msgid "name"
-msgstr "name"
-
-msgctxt "WorkflowTransition"
+msgctxt "CWCache"
 msgid "name"
 msgstr "name"
 
@@ -3270,10 +3273,10 @@ msgctxt "EmailAddress"
 msgid "prefered_form"
 msgstr "prefered form"
 
+msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
-msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
@@ -3293,10 +3296,10 @@ msgctxt "CWUser"
 msgid "primary_email"
 msgstr "primary email"
 
+msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
-msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
 
@@ -3327,11 +3330,11 @@ msgstr ""
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWAttribute"
+msgctxt "CWEType"
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWEType"
+msgctxt "CWAttribute"
 msgid "read_permission"
 msgstr "read permission"
 
@@ -3339,14 +3342,14 @@ msgctxt "CWRelation"
 msgid "read_permission"
 msgstr "read permission"
 
-msgid "read_permission_object"
-msgstr "has permission to read"
-
 msgctxt "CWGroup"
 msgid "read_permission_object"
 msgstr "has permission to read"
 
 msgctxt "RQLExpression"
+msgid "read_permission_object"
+msgstr "has permission to read"
+
 msgid "read_permission_object"
 msgstr "has permission to read"
 
@@ -3404,10 +3407,10 @@ msgctxt "CWRelation"
 msgid "relation_type"
 msgstr "relation type"
 
+msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
-msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
@@ -3421,10 +3424,10 @@ msgstr "relations"
 msgid "relations deleted"
 msgstr ""
 
+msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
-msgctxt "CWRType"
 msgid "relations_object"
 msgstr "constrained by"
 
@@ -3441,11 +3444,11 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWPermission"
+msgctxt "Transition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "Transition"
+msgctxt "CWPermission"
 msgid "require_group"
 msgstr "require group"
 
@@ -3453,10 +3456,10 @@ msgctxt "WorkflowTransition"
 msgid "require_group"
 msgstr "require group"
 
+msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
-msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
@@ -3654,10 +3657,10 @@ msgctxt "CWEType"
 msgid "specializes"
 msgstr "specializes"
 
+msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
-msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
@@ -3698,10 +3701,10 @@ msgctxt "State"
 msgid "state_of"
 msgstr "state of"
 
+msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
-msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
@@ -3745,20 +3748,20 @@ msgctxt "WorkflowTransition"
 msgid "subworkflow_exit"
 msgstr "subworkflow exit"
 
-msgid "subworkflow_exit_object"
-msgstr "subworkflow exit of"
-
 msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_exit_object"
 msgstr "subworkflow exit of"
 
-msgid "subworkflow_object"
-msgstr "subworkflow of"
+msgid "subworkflow_exit_object"
+msgstr "subworkflow exit of"
 
 msgctxt "Workflow"
 msgid "subworkflow_object"
 msgstr "subworkflow of"
 
+msgid "subworkflow_object"
+msgstr "subworkflow of"
+
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
@@ -3766,10 +3769,10 @@ msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
+msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
-msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
@@ -3895,10 +3898,10 @@ msgctxt "CWRelation"
 msgid "to_entity"
 msgstr "to entity"
 
+msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
-msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
@@ -3912,10 +3915,10 @@ msgctxt "TrInfo"
 msgid "to_state"
 msgstr "to state"
 
+msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
-msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
@@ -3935,7 +3938,7 @@ msgctxt "TrInfo"
 msgid "tr_count"
 msgstr "transition number"
 
-msgid "transaction undone"
+msgid "transaction undoed"
 msgstr ""
 
 #, python-format
@@ -3966,10 +3969,10 @@ msgctxt "WorkflowTransition"
 msgid "transition_of"
 msgstr "transition of"
 
+msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
-msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
@@ -3986,15 +3989,15 @@ msgctxt "BaseTransition"
 msgid "type"
 msgstr "type"
 
-msgctxt "CWSource"
-msgid "type"
-msgstr "type"
-
 msgctxt "Transition"
 msgid "type"
 msgstr "type"
 
 msgctxt "WorkflowTransition"
+msgid "type"
+msgstr "type"
+
+msgctxt "CWSource"
 msgid "type"
 msgstr "type"
 
@@ -4086,22 +4089,22 @@ msgstr ""
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgctxt "CWAttribute"
-msgid "update_permission"
-msgstr "can be updated by"
-
 msgctxt "CWEType"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgid "update_permission_object"
-msgstr "has permission to update"
+msgctxt "CWAttribute"
+msgid "update_permission"
+msgstr "can be updated by"
 
 msgctxt "CWGroup"
 msgid "update_permission_object"
 msgstr "has permission to update"
 
 msgctxt "RQLExpression"
+msgid "update_permission_object"
+msgstr "has permission to update"
+
 msgid "update_permission_object"
 msgstr "has permission to update"
 
@@ -4145,10 +4148,10 @@ msgctxt "CWUser"
 msgid "use_email"
 msgstr "use email"
 
+msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
-msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
@@ -4211,27 +4214,27 @@ msgctxt "CWProperty"
 msgid "value"
 msgstr ""
 
+#, python-format
+msgid "value %(value)s must be %(op)s %(boundary)s"
+msgstr ""
+
+#, python-format
+msgid "value %(value)s must be <= %(boundary)s"
+msgstr ""
+
+#, python-format
+msgid "value %(value)s must be >= %(boundary)s"
+msgstr ""
+
 msgid "value associated to this key is not editable manually"
 msgstr ""
 
 #, python-format
-msgid "value must be %(op)s %(boundary)s"
+msgid "value should have maximum size of %s but found %s"
 msgstr ""
 
 #, python-format
-msgid "value must be <= %(boundary)s"
-msgstr ""
-
-#, python-format
-msgid "value must be >= %(boundary)s"
-msgstr ""
-
-#, python-format
-msgid "value should have maximum size of %s"
-msgstr ""
-
-#, python-format
-msgid "value should have minimum size of %s"
+msgid "value should have minimum size of %s but found %s"
 msgstr ""
 
 msgid "vcard"
@@ -4340,10 +4343,10 @@ msgctxt "Workflow"
 msgid "workflow_of"
 msgstr "workflow of"
 
+msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
-msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
