--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.12.7-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 21 Jun 2011 14:47:14 +0200
+
 cubicweb (3.12.6-1) unstable; urgency=low
 
   * new upstream release
